# go-martian-memory

./: AUTHORS  README  README.md  martian_memory.go
assets/fonts/: menu_a.T8
assets/gfx/: menuback.T8
orig/Martian-Memory/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
orig/Martian-Memory/data/: Makefile.am  Makefile.in
orig/Martian-Memory/docs/: Makefile.am  Makefile.in
orig/Martian-Memory/fonts/: Makefile.am  Makefile.in  bonus.T8  menu_i.T8  score.T8  score2.T8
orig/Martian-Memory/gfx/: Makefile.am  Makefile.in  chips.T8
orig/Martian-Memory/music/: Makefile.am  Makefile.in
orig/Martian-Memory/sounds/: Makefile.am  Makefile.in
orig/Martian-Memory/src/: Makefile.am  Makefile.in  define.h  file.c  fx.c  game.c  gameover.c  gfx.h  initSDL.h  input.c  martian.cpp  menu.c  menu.h  music.c  text.h  timing.c
